--- a/app_mais_escola/package.json
+++ b/app_mais_escola/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "~0.16.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
